--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body{
   width: 500px;
   border-radius: 50px;
 }
+/*used for managing appearance on mobile devices*/
 @media (max-width: 800px){
   .contact-inputs{
     width:80vw;
